--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,27 @@
 .App {
   text-align: center;
 }
-
+* {
+  box-sizing: border-box;
+  font-family: arial, sans-serif;
+}
+.footer{
+  margin-top: 1rem;
+  padding: 1rem;
+  background-color: rgb(0, 0, 0);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  color: white;
+}
+body {
+  background: linear-gradient(#ffffff, #c0c0c0);
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  width: 100vw;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
