--- a/src/App.css
+++ b/src/App.css
@@ -1,58 +1,7 @@
-.App {
-  text-align: center;
-}
 * {
   box-sizing: border-box;
   font-family: arial, sans-serif;
-}
-.footer{
-  margin-top: 1rem;
-  padding: 1rem;
-  background-color: rgb(0, 0, 0);
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  color: white;
-}
-body {
-  background: linear-gradient(#ffffff, #c0c0c0);
-  height: 100vh;
   padding: 0;
   margin: 0;
-  width: 100vw;
-}
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-family: 'Montserrat', sans-serif;
 }
