--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,6 +9,5 @@ footer{
     bottom:0;
     display:block;
     width:100%;
-    height: 2.5rem;            /* Footer height */
-
+    padding: 0px !important;  /* same size as header */
 }
