--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -11,3 +11,11 @@ footer{
     width:100%;
     padding: 0px !important;  /* same size as header */
 }
+
+.lable {
+    color: gray;
+}
+
+.columns is-flex {
+    display: flex;
+}
