--- a/client/src/styles/Signin.css
+++ b/client/src/styles/Signin.css
@@ -4,18 +4,34 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: Arial;
 }
 .signin_container {
     display: flex;
     flex-direction: column;
     text-align: center;
     padding: 30px;
+    font-weight: bold;
+    justify-content: space-between;
 }
 .signin_textBox {
-    padding: 10px;
-    font-size: 18px;
+    padding: 4px;
+    font-size: 15px;
     margin-bottom: 10px;
     color: black;
+}
+.email_box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.password_box {
+    display: flex;
+    flex-direction: column;
+}
+.btns {
+    display: flex;
+    flex-direction: column;
 }
 .signin_btn {
     padding: 10px;
