--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -12,3 +12,143 @@ footer{
     padding: 0px !important;  /* same size as header */
 }
 
+.signup {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.signup_container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 30px;
+}
+.signup_textBox {
+    padding: 10px;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+.signup_btn {
+    padding: 10px;
+    font-size: 18px;
+    margin-bottom: 10px;
+    border: none;
+    color: white;
+    background-color: black;
+}
+.signup_google {
+    background-color: #4285f4;
+}
+.signup div {
+    margin-top: 7px;
+}
+
+.signin {
+    height: 70vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.signin_container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 30px;
+}
+.signin_textBox {
+    padding: 10px;
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: black;
+}
+.signin_btn {
+    padding: 10px;
+    font-size: 18px;
+    margin-bottom: 10px;
+    border: none;
+    color: white;
+    background-color: black;
+}
+.signin_google {
+    background-color: #4285f4;
+}
+.signin div {
+    margin-top: 7px;
+}
+
+.bordered-active {
+    border-bottom: 3px solid #fff;
+}
+
+.navbar-item {
+    margin-bottom: 5px;
+}
+
+.navbar-button {
+    margin-bottom: 5px;
+    color: black;
+
+}
+
+.column.is-flex {
+    display:flex;
+    font-weight: bold;
+    font-size: 24px;
+    color: rgba(0, 0, 2, 0.76);
+    width: 100%;
+    margin: 9px;
+    box-shadow: 2px 2px 8px 0px rgba(0, 5, 25, .3);
+}
+
+.field {
+    display: flex;
+    flex: 0 0 100%;
+    width: 180%;
+}
+
+.item_s {
+    display: flex;
+    color: grey;
+    flex-direction: column;
+    column-gap: 25px;
+    font-weight: bolder;
+    height: 75px;
+    box-shadow: 1px 2px 10px 0px rgba(0, 5, 25, .3);
+    margin: 9px;
+    padding-left: 10px;
+    padding-top: 10px;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.item_container {
+    display: flex;
+    flex-direction: column;
+}
+h5 {
+    display: flex;
+    color: rgb(10, 10, 10);
+    flex-wrap: wrap;
+    justify-content: space-between;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+h2 {
+    font-size: 18px;
+}
+
+.Collapsible__contentInner {
+    display: flex;
+    flex: 0 0 100%;
+    width: 180%;
+}
+
+.Collapsible__contentOuter {
+    display: flex;
+    flex-wrap: wrap;
+    width: 180%;
+}
