--- a/client/src/styles/Signup.css
+++ b/client/src/styles/Signup.css
@@ -10,11 +10,56 @@
     flex-direction: column;
     text-align: center;
     padding: 30px;
+    width: 70%;
+    height: 90%;
+}
+.details_address {
+    display: flex;
+    justify-content:space-between;
+}
+.address_fill {
+    display: flex;
+    justify-content: space-between;
+    width: 20%;
+}
+.user_details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 65vh;
+}
+::placeholder {
+    font-size: 13px;
+    color: darkgray;
+}
+.address {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 55vh;
+}
+.address_column {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+}
+p {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    font-size: 18px;
+    font-weight: bold;
 }
 .signup_textBox {
-    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
+    padding-left: 4px;
+    padding-bottom: 4px;
     font-size: 18px;
-    margin-bottom: 10px;
+    margin-bottom: 16px;
+    width: 60%;
+    height: 80%;
 }
 .signup_btn {
     padding: 10px;
@@ -28,5 +73,18 @@
     background-color: #4285f4;
 }
 .signup div {
-    margin-top: 7px;
+    margin-top: 20px;
+}
+.fill_in {
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    font-weight: bold;
+}
+h1 {
+    font-weight: bolder;
+}
+h2 {
+    font-weight: bolder;
+    text-align: center;
 }
