feat: added style to the Menu page

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -3,13 +3,19 @@
     width: 50px;
 }
 
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    padding-bottom: 40px;
+}
 
-footer{
-    position:fixed;
-    bottom:0;
-    display:block;
-    width:100%;
-    padding: 0px !important;  /* same size as header */
+footer {
+    position: fixed;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    padding: 0px !important; /* same size as header */
 }
 
 .signup {
@@ -19,17 +25,20 @@ footer{
     align-items: center;
     justify-content: center;
 }
+
 .signup_container {
     display: flex;
     flex-direction: column;
     text-align: center;
     padding: 30px;
 }
+
 .signup_textBox {
     padding: 10px;
     font-size: 18px;
     margin-bottom: 10px;
 }
+
 .signup_btn {
     padding: 10px;
     font-size: 18px;
@@ -38,9 +47,11 @@ footer{
     color: white;
     background-color: black;
 }
+
 .signup_google {
     background-color: #4285f4;
 }
+
 .signup div {
     margin-top: 7px;
 }
@@ -52,18 +63,21 @@ footer{
     align-items: center;
     justify-content: center;
 }
+
 .signin_container {
     display: flex;
     flex-direction: column;
     text-align: center;
     padding: 30px;
 }
+
 .signin_textBox {
     padding: 10px;
     font-size: 18px;
     margin-bottom: 10px;
     color: black;
 }
+
 .signin_btn {
     padding: 10px;
     font-size: 18px;
@@ -72,9 +86,11 @@ footer{
     color: white;
     background-color: black;
 }
+
 .signin_google {
     background-color: #4285f4;
 }
+
 .signin div {
     margin-top: 7px;
 }
@@ -88,13 +104,17 @@ footer{
 }
 
 .navbar-button {
-    margin-bottom: 5px;
-    color: black;
-
+    display: flex;
+    flex-direction: row;
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    padding: 10px 10px;
+    margin: 5px 5px 5px 5px;
+    cursor: pointer;
 }
 
 .column.is-flex {
-    display:flex;
     font-weight: bold;
     font-size: 24px;
     color: rgba(0, 0, 2, 0.76);
@@ -107,6 +127,7 @@ footer{
     display: flex;
     flex: 0 0 100%;
     width: 180%;
+    cursor: pointer;
 }
 
 .item_s {
@@ -124,10 +145,46 @@ footer{
     flex-wrap: wrap;
 }
 
-.item_container {
+.button_delivery_pick_up {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    padding: 10px 60px;
+    border-radius: 5px;
+    margin-right: 2px;
+    cursor: pointer;
 }
+
+.button_delivery_pick_up_chosen {
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    color: black;
+    font-size: 20px;
+    padding: 10px 60px;
+    border-radius: 5px;
+    margin-right: 2px;
+    cursor: pointer;
+}
+
+.Black {
+    background-color: black;
+    color: white;
+}
+
+.White {
+    background-color: white;
+    color: black;
+}
+
+.buttons_delivery {
+    display: flex;
+    margin: 25px 25px 25px;
+
+}
+
 h5 {
     display: flex;
     color: rgb(10, 10, 10);
@@ -151,4 +208,24 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     width: 180%;
+}
+
+.menu_container {
+    height: 1000px;
+    margin: 15px 400px 50px 20px;
+}
+
+.menu_items {
+    height: 200px;
+    padding: 10px;
+    font-size: 20px;
+    background-position: center;
+    background-size: cover;
+    filter: contrast(75%);
+    border-radius: 7px;
+    margin-top: 5px;
+    transition-duration: .1s;
+    box-shadow: 0px 0px 2px 0px grey;
+    cursor: pointer;
+
 }
