--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -25,6 +25,12 @@ footer {
     align-items: center;
     justify-content: center;
 }
+.signup2 {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
 
 .signup_container {
     display: flex;
@@ -33,6 +39,11 @@ footer {
     padding: 30px;
 }
 
+.signup_container2 {
+    display: flex;
+    text-align: center;
+    margin-bottom: 20px;
+}
 .signup_textBox {
     padding: 10px;
     font-size: 18px;
@@ -338,6 +349,10 @@ h2 {
     justify-content: space-between;
 }
 
+.details_address2 {
+    display: flex;
+    flex-direction: column;
+}
 .address_fill {
     display: flex;
     justify-content: space-between;
@@ -347,6 +362,11 @@ h2 {
 .user_details {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    width: 65vh;
+}
+.user_details2 {
+    display: flex;
     justify-content: space-around;
     width: 65vh;
 }
