--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -330,3 +330,453 @@ h2 {
     flex-direction: row;
     align-content: flex-start;
 }
+
+
+/* Admin home page */
+
+.admin {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 5%;
+    height: 70vh;
+    width: 100vw;
+}
+
+.admin_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.adminicon {
+    width: 15rem;
+}
+
+.signin_admin {
+    align-items: center;
+    background-color: black;
+    color: white;
+    width: 13.5vw;
+    padding: 3px;
+    margin-top: 35%;
+    font-size: large;
+}
+
+.admincreatebtn {
+    background-color: black;
+    color: white;
+    margin-top: 35%;
+    padding: 3px;
+    font-size: medium;
+    width: 13.5vw;
+}
+
+
+/* admin signin */
+
+.adminsignin {
+    height: 70vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Arial;
+}
+
+.adminsignin_container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 30px;
+    font-weight: bold;
+    justify-content: space-between;
+}
+
+.adminsignin_textBox {
+    padding: 4px;
+    font-size: 15px;
+    margin-bottom: 10px;
+    color: black;
+}
+
+.adminemail_box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.adminpassword_box {
+    display: flex;
+    flex-direction: column;
+    margin-top: 5%;
+}
+
+.btns {
+    display: flex;
+    flex-direction: column;
+}
+
+.adminsignin_btn {
+    font-size: 20px;
+    margin-bottom: 10px;
+    border: none;
+    color: white;
+    background-color: black;
+    margin-top: 5%;
+    width: 20vw;
+    height: 4.6vh;
+}
+
+.signin div {
+    margin-top: 7px;
+}
+
+.adminresetpswrd_redirect {
+    margin-top: 10%;
+}
+
+.admincreate_reset {
+    margin-top: 10%;
+}
+
+
+/* admin signup */
+
+.adminsignup {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.adminsignup_container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 30px;
+    width: 70%;
+    height: 90%;
+}
+
+.adminsignup_textBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
+    padding-left: 4px;
+    padding-bottom: 4px;
+    font-size: 18px;
+    margin-bottom: 16px;
+    width: 60%;
+    height: 80%;
+}
+
+.adminsignup_btn {
+    padding: 10px;
+    font-size: 18px;
+    margin-bottom: 10px;
+    border: none;
+    color: white;
+    background-color: black;
+}
+
+.adminsignup div {
+    margin-top: 20px;
+}
+
+.adminfill_in {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.admin_deatils {
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-left: 20%;
+}
+
+.admin_credentials {
+    display: flex;
+    justify-content: space-between;
+}
+
+.adminuser_details {
+    display: flex;
+    justify-content: space-between;
+}
+
+.adminsignup_box {
+    display: flex;
+    flex-direction: column;
+}
+
+.dropdown {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.employee_roles {
+    width: 100%;
+    height: 4vh;
+}
+
+.adminfillin_dropdown {
+    width: 95vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+
+/* admin reset password */
+
+.adminresetpassword {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+}
+
+.adminpassword_container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-weight: bold;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 3%;
+    width: 70%;
+}
+
+.admin_box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 80vw;
+    margin-top: 3%;
+}
+
+.adminresetpassword_details {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-top: 4%;
+    width: 40vw;
+}
+
+.adminemail {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 15vw;
+}
+
+.employee_name {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 15vw;
+}
+
+.adminresetpassword_box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 6%;
+    width: 40vw;
+}
+
+.admin_newpassword {
+    display: flex;
+    flex-direction: column;
+    width: 15vw;
+}
+
+.admin_reenter_newpassword {
+    display: flex;
+    flex-direction: column;
+    width: 15vw;
+}
+
+.adminemail_textBox {
+    /* padding: 6px; */
+    font-size: 15px;
+    /* margin-bottom: 10px; */
+    color: black;
+}
+
+.admin_resetpswrd_submit_btn {
+    /* padding: 6px; */
+    font-size: 18px;
+    margin-top: 8%;
+    border: none;
+    color: white;
+    background-color: black;
+    width: 20%;
+    height: 5vh;
+}
+
+.employeename_textBox {
+    margin-top: 2%;
+    height: 4vh;
+}
+
+.adminemail_textBox {
+    margin-top: 2%;
+    height: 4vh;
+}
+
+.employeepswrd_textBox {
+    margin-top: 2%;
+    height: 4vh;
+}
+
+.employee_reenter_textBox {
+    margin-top: 2%;
+    height: 4vh;
+}
+
+
+/* Admin Account */
+
+.admin_acc {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    width: 40vw;
+    height: 20vh;
+    margin-top: 10%;
+}
+
+.name_email {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 7%;
+}
+
+.role_pswrd {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 13%;
+    width: 34vw;
+}
+
+.role {
+    display: flex;
+    margin-top: 2%;
+    height: 4vh;
+    font-weight: bold;
+}
+
+.pswrd {
+    display: flex;
+    margin-top: 2%;
+    height: 4vh;
+    font-weight: bold;
+}
+
+.adminame {
+    display: flex;
+    margin-top: 2%;
+    height: 4vh;
+    font-weight: bold;
+}
+
+.adminemail {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 2%;
+    height: 4vh;
+    font-weight: bold;
+}
+
+.update_btn {
+    background-color: black;
+    color: white;
+    width: 10vw;
+    height: 5.4vh;
+    margin-top: 23%;
+    font-size: 90%;
+}
+
+
+/* UpdateAccount Information */
+
+h1 {
+    margin-top: 5%;
+}
+
+.update_adminame {
+    display: flex;
+    flex-direction: column;
+    width: 15vw;
+    font-weight: bold;
+}
+
+.update_adminame_textBox {
+    height: 3.4vh;
+    margin-top: 5%;
+}
+
+.update_adminemail_textBox {
+    height: 3.4vh;
+    margin-top: 5%;
+}
+
+.update_adminemail {
+    display: flex;
+    flex-direction: column;
+    width: 15vw;
+    font-weight: bold;
+}
+
+.update_employee_roles {
+    height: 3.4vh;
+    margin-top: 4%;
+}
+
+.updateadmin_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 70vh;
+}
+
+.update_info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 60vw;
+}
+
+.update_dropdown {
+    display: flex;
+    flex-direction: column;
+    margin-top: 0%;
+    width: 15vw;
+    font-weight: bold;
+}
+
+.update_info_btn {
+    background-color: black;
+    color: white;
+    width: 5vw;
+    height: 3.4vh;
+}
