--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -769,7 +769,7 @@ h1 {
 .update_dropdown {
     display: flex;
     flex-direction: column;
-    margin-top: 0;
+    margin-top: 0%;
     width: 15vw;
     font-weight: bold;
 }
