--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -82,7 +82,6 @@ footer {
 
 
 /* item styling */
-
 .item_s {
     display: flex;
     color: grey;
@@ -90,13 +89,21 @@ footer {
     column-gap: 25px;
     font-weight: bolder;
     height: 75px;
-    box-shadow: 1px 2px 10px 0px rgba(0, 5, 25, .3);
+    box-shadow: 1px 2px 10px 0 rgba(0, 5, 25, .3);
     margin: 9px;
     padding-left: 10px;
     padding-top: 10px;
     justify-content: space-around;
     flex-wrap: wrap;
 }
+.pickDel_btn{
+    margin-right: 15px;
+    border-radius: 15px;
+    padding: 15px;
+    border: lightgray 2px solid;
+    box-shadow: 1px 2px 10px 0 rgba(0, 5, 25, .3);
+}
+
 
 .item_container {
     display: flex;
